Se agrega el proyecto

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
+
 <ActionBar class="action-bar">
   <NavigationButton visibility="hidden"></NavigationButton>
   <GridLayout columns="50, *">
-    <Label class="action-bar-title" text="Home" colSpan="2"></Label>
+    <Label class="action-bar-title" text="Inicio" colSpan="2"></Label>
 
     <Label class="fas" text="&#xf0c9;" (tap)="onDrawerButtonTap()"></Label>
   </GridLayout>
@@ -9,5 +10,6 @@
 
 <GridLayout class="page__content">
   <Label class="page__content-icon fas" text="&#xf015;"></Label>
-  <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
+
+  <Label class="page__content-placeholder" text="Bienvenido  :)"></Label>
 </GridLayout>
