--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
 <RadSideDrawer [drawerTransition]="sideDrawerTransition">
   <GridLayout tkDrawerContent rows="auto, *" class="nt-drawer__content">
     <StackLayout row="0" class="nt-drawer__header">
-      <Image class="nt-drawer__header-image fas t-36" src="font://&#xf2bd;"></Image>
-      <Label class="nt-drawer__header-brand" text="User Name"></Label>
-      <Label class="nt-drawer__header-footnote" text="username@mail.com"></Label>
+      <Image class="nt-drawer__header-image fas t-36" src="~/imagenes/udg.png" stretch="aspectFill"></Image>
+      <Label class="nt-drawer__header-brand" text=""></Label>
+      <Label class="nt-drawer__header-footnote" text="Revista UDG"></Label>
     </StackLayout>
 
     <ScrollView row="1" class="nt-drawer__body">
@@ -19,8 +19,9 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
           [class.-selected]="isComponentSelected('/home')"
           (tap)="onNavItemTap('/home')"
         >
+        
           <Label col="0" text="&#xf015;" class="nt-icon fas"></Label>
-          <Label col="1" text="Home" class="p-r-10"></Label>
+          <Label col="1" text="Inicio" class="p-r-10"></Label>
         </GridLayout>
 
         <GridLayout
@@ -30,7 +31,7 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
           (tap)="onNavItemTap('/browse')"
         >
           <Label col="0" text="&#xf1ea;" class="nt-icon far"></Label>
-          <Label col="1" text="Browse" class="p-r-10"></Label>
+          <Label col="1" text="Explorar" class="p-r-10"></Label>
         </GridLayout>
 
         <GridLayout
@@ -40,7 +41,7 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
           (tap)="onNavItemTap('/search')"
         >
           <Label col="0" text="&#xf002;" class="nt-icon fas"></Label>
-          <Label col="1" text="Search" class="p-r-10"></Label>
+          <Label col="1" text="Buscar" class="p-r-10"></Label>
         </GridLayout>
 
         <GridLayout
@@ -50,7 +51,27 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
           (tap)="onNavItemTap('/featured')"
         >
           <Label col="0" text="&#xf005;" class="nt-icon fas"></Label>
-          <Label col="1" text="Featured" class="p-r-10"></Label>
+          <Label col="1" text="Nuevo" class="p-r-10"></Label>
+        </GridLayout>
+
+        <GridLayout
+          columns="auto, *"
+          class="nt-drawer__list-item"
+          [class.-selected]="isComponentSelected('/game')"
+          (tap)="onNavItemTap('/game')"
+        >
+          <Label col="0" text="&#xf2cd;" class="nt-icon fas"></Label>
+          <Label col="1" text="Juego" class="p-r-10"></Label>
+        </GridLayout>
+
+        <GridLayout
+          columns="auto, *"
+          class="nt-drawer__list-item"
+          [class.-selected]="isComponentSelected('/Informacion')"
+          (tap)="onNavItemTap('/informacion')"
+        >
+          <Label col="0" text="&#xf129;" class="nt-icon fas"></Label>
+          <Label col="1" text="Información" class="p-r-10"></Label>
         </GridLayout>
 
         <StackLayout class="hr"></StackLayout>
