--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -7,7 +7,9 @@
   </GridLayout>
 </ActionBar>
 
-<GridLayout class="page__content">
+<StackLayout class="page__content">
   <Label class="page__content-icon far" text="&#xf1ea;"></Label>
-  <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
-</GridLayout>
+  <Label Size="20" horizontalAlignment="center" marginTop="100" text="¿Deseas conocer tu plataforma?"></Label>
+  <button text="Clic aqui" class="boton"  (tap)="tap()"></button>
+
+</StackLayout>
