--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -8,6 +8,6 @@
 </ActionBar>
 
 <GridLayout class="page__content">
-  <Label class="page__content-icon fas" text="&#xf005;"></Label>
-  <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
+  <Label class="page__content-icon fas" text="&#xf0e2;"></Label>
+  <Label class="page__content-placeholder" text="Nada nuevo"></Label>
 </GridLayout>
