--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,13 +1,14 @@
 <ActionBar class="action-bar">
   <NavigationButton visibility="hidden"></NavigationButton>
   <GridLayout columns="50, *">
-    <Label class="action-bar-title" text="Search" colSpan="2"></Label>
+    <Label class="action-bar-title" text="buscar" colSpan="2"></Label>
 
     <Label class="fas" text="&#xf0c9;" (tap)="onDrawerButtonTap()"></Label>
   </GridLayout>
 </ActionBar>
 
-<GridLayout class="page__content">
-  <Label class="page__content-icon fas" text="&#xf002;"></Label>
-  <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
-</GridLayout>
+<StackLayout class="page__content">
+  <Label class="page__content-icon fas" text="&#xf00e;"></Label>
+
+  <Label class="page__content-placeholder" *ngFor="let s of this.noticias.buscar()" [text]="s"></Label>
+</StackLayout>
