--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -9,5 +9,11 @@
 
 <GridLayout class="page__content">
   <Label class="page__content-icon fas" text="&#xf013;"></Label>
-  <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
+  <Label textWrap="true" marginTop="300" horizontalAlignment="center">
+    <FormattedString>
+      <span text="No tienes los permisos "></span>
+      <span text="suficientes para "></span>
+      <span text="realizar cambios en "></span>
+      <span text="el sistema" ></span>
+    </FormattedString></Label>
 </GridLayout>
